calendar: recurring events seemingly display correctly, drag-edits disabled, but delete still visible

--- a/public/stylesheets/cal.css
+++ b/public/stylesheets/cal.css
@@ -78,3 +78,9 @@ ul.nav-tabs a {
     top: 68px;
   }
 }
+
+.draggable-events .glyphicon {
+  font-size: 1.5em;
+  margin-top: 10px;
+  display: inline-block;
+}
